added back to front button, changed button styles. few other small changes

--- a/index.html
+++ b/index.html
@@ -36,15 +36,15 @@
                     <button type="button" id="pause-play">
                         <span id="pp" class="glyphicon glyphicon-play" aria-hidden="true"></span>
                     </button>
+                    <button type="button" class="show-queue" id="backBtn">
+                        <span class="glyphicon glyphicon-step-backward" aria-hidden="true"></span>
+                    </button>
                     <button type="button" id="nextTrack" class="next-song">
                         <span class="glyphicon glyphicon-step-forward" aria-hidden="true"></span>
                     </button>
                     <button type="button" class="show-queue" id="toggleShowQueue">
                         <span id="sq" class="glyphicon glyphicon-menu-right" aria-hidden="true"></span>
                     </button>
-                    <!-- <button type="button" class="show-queue" id="testBtn">
-                        <span class="glyphicon" aria-hidden="true">TEST</span>
-                    </button> -->
                 </div>
             </article>
             <span class="queue-tip" id="qTip">Queue:</span>
@@ -144,6 +144,7 @@
                 <span>With various samples and inspiration from:</span>
                 <h5>Boards of canada</h5>
                 <h5>Aphex Twin</h5>
+                <h5>Autechre</h5>
                 <h5>Broadcast</h5>
                 <h5>Animal Collective</h5>
                 <h5>Vashti Bunyan</h5>
