added link, songs

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                 <h5>S. Balachander</h5>
                 <h5>And many more.</h5>
             </div>
-            <h6><a href="https://www.burnthis.space">itsjustaburner</a> ☼ <a href="https://soundcloud.com/itsjustaburner">Soundcloud</a> ☼ <a href="https://itsjustaburner.bandcamp.com/music">BandCamp</a> ☼ 2022</h6>
+            <h6><a href="https://www.burnthis.space">itsjustaburner</a> ☼ <a href="https://soundcloud.com/itsjustaburner">Soundcloud</a> ☼ <a href="https://itsjustaburner.bandcamp.com/music">BandCamp</a> ☼ <a href="https://www.twitch.tv/ijaburner">Live</a> ☼ 2022</h6>
             
         </div>
         
